Adding edit the existing host data Ordering by status

--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -46,52 +46,41 @@
                         </button>
                     </td>
                     <td width="5%" class="text-left">
-                        <div ng-hide="nameEditorEnabled">
-                            {{host.name}}
-                            <div class="btn-group">
-                                <button class="btn btn-primary btn-xs glyphicon glyphicon-pencil"
-                                        ng-click="nameEditorEnabled=!nameEditorEnabled"></button>
+                        <div ng-click="editHostEnabled=!editHostEnabled">
+
+                            <div ng-hide="editHostEnabled">
+                                {{host.name}}
                             </div>
-                        </div>
-                        <div ng-show="nameEditorEnabled">
-                            <input ng-model="host.name">
-                            <button class="btn btn-primary btn-xs glyphicon glyphicon-ok"
-                                    ng-click="nameEditorEnabled=!nameEditorEnabled"></button>
+                            <div ng-show="editHostEnabled">
+                                <input ng-model="host.name">
+                            </div>
                         </div>
                     </td>
                     <td width="5%" class="text-left">
-                        <div ng-hide="urlEditorEnabled">
-                            {{host.url | limitTo:50}}
-                            <div class="btn-group">
-                                <button class="btn btn-primary btn-xs glyphicon glyphicon-pencil"
-                                        ng-click="urlEditorEnabled=!urlEditorEnabled"></button>
+                        <div ng-click="editHostEnabled=!editHostEnabled">
+                            <div ng-hide="editHostEnabled">
+                                {{host.url | limitTo:50}}
+
+                            </div>
+                            <div ng-show="editHostEnabled">
+                                <input size="40" ng-model="host.url">
                             </div>
                         </div>
-                        <div ng-show="urlEditorEnabled">
-                            <input size="40" ng-model="host.url">
-                            <button class="btn btn-primary btn-xs glyphicon glyphicon-ok"
-                                    ng-click="urlEditorEnabled=!urlEditorEnabled;validateUrl(host)"></button>
-                        </div>
+
                     </td>
                     <td width="1%" class="text-center">{{host.created | date : shortDate}}</td>
                     <td width="7%" class="text-center">{{host.lastConnected | date : shortDate}}</td>
                     <td width="15%" class="text-center">
                         <button ng-class="{'btn btn-success glyphicon glyphicon-log-in': host.selected, 'btn btn-info glyphicon glyphicon-log-in': !host.selected}"
                                 ng-click="checkContainersFor(host)" ng-disabled='!host.status' title="Select host"></button>
-                        <button class=" btn btn-info glyphicon glyphicon-remove" ng-click="removeHost(host)" title="Delete host from the list"></button>
+                        <button ng-class="{'btn btn-warning glyphicon glyphicon-pencil':!editHostEnabled, 'btn btn-success glyphicon glyphicon-ok':editHostEnabled}"
+                                ng-click="editHostEnabled=!editHostEnabled" title="Edit host data"></button>
+                        <button class="btn btn-danger glyphicon glyphicon-remove" ng-click="removeHost(host)" title="Delete host from the list"></button>
                     </td>
                     <td width="7%" class="text-center"><span style="font-size:1.5em;" class="glyphicon glyphicon-unchecked" aria-hidden="true"></span></td>
                 </tr>
 
             </table>
         </div>
-        <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-            Extra small button <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-            ...
-        </ul>
     </div>
-</div>
-</div>
 </div>
