--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -26,7 +26,9 @@
         <div class="table-responsive">
             <table class="table table-condensed table-bordered">
                 <tr class="success">
-                    <td colspan="8" align="center">Hosts data</td>
+                    <td colspan="8" align="center">
+                        Hosts data
+                    </td>
                 </tr>
                 <tr>
                     <td width="1%" class="text-center"><strong>Health</strong></td>
