Registering custom filter

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <script src="assets/libs/angular-resource/angular-resource.js"></script>
 <!---->
 <script src="app/app.modules.js"></script>
+<script src="app/app.filters.js"></script>
 <script src="app/shared/services.js"></script>
 <!---->
 <script src="app/hosts/hosts.js"></script>
