--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -1,53 +1,55 @@
-<div class="container">
-
-    <table class="table table-condensed table-hover table-bordered">
-        <tr class="success">
-            <td colspan="8" align="center">
-                <div class="container">
-                    <div class="col-md-1">
-                        <span ng-click='refreshContainers()' class="glyphicon glyphicon-refresh left"></span>
-                    </div>
-                    <div class="col-md-11">
-                        Containers on {{$root.hostUrl}}
-                    </div>
-
-                </div>
-            </td>
-        </tr>
-
-        <tr>
-            <td width="1%" class="text-center">ID</td>
-            <td width="1%" class="text-center">Name</td>
-            <td width="1%" class="text-center">Image</td>
-            <td width="15%" class="text-center">Created</td>
-            <td width="15%" class="text-center">Status</td>
-            <td width="7%" class="text-center">Diff size</td>
-            <td width="7%" class="text-center">Virtual size</td>
-        </tr>
-
-
-        <tr ng-repeat="(key, value) in containerDataList">
-            <td>
-                <button class="btn btn-info btn-block text-center" ng-click="goContainerDetails(value.Id)">
-                    {{value.Id | limitTo:12}}
-                </button>
-            </td>
-            <td>
-                <button class="btn btn-info btn-block text-right" ng-click="goContainerDetails(value.Id)">
-                    {{value.Name | shorten:true:30}}
-                </button>
-            </td>
-            <td>
-                <button class="btn btn-info btn-block" ng-click="goImageDetails(value.ImageId)">
-                    {{value.Image | shorten:true:30}}
-                </button>
-
-            </td>
-            <td>{{value.Created * 1000 | date:'dd, MMM yyyy HH:mm:ss'}}</td>
-            <td class="text-center">{{value.Status}}</td>
-            <td>{{value.SizeRw | bytes }}</td>
-            <td>{{value.SizeRootFs | bytes }}</td>
-
-        </tr>
-    </table>
+<div class="col-md-12 text-center">
+    Containers on {{$root.hostUrl}}
 </div>
+<table class="table table-condensed table-hover table-bordered">
+    <thead>
+    <tr class="success">
+        <td colspan="7" align="center">
+            <div class="container">
+                <div class="col-md-1">
+                    <button ng-click='refreshContainers()' class="btn btn-block btn-primary glyphicon glyphicon-refresh" title="Refresh list"></button>
+                </div>
+                <div class="col-md-1">
+                    <button ng-click='createContainer()' class="btn btn-block btn-success glyphicon glyphicon-plus" title="Create new container"></button>
+                </div>
+                <div class="col-md-10">
+                    Containers on {{$root.hostUrl}}
+                </div>
+
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%" class="text-center">ID</td>
+        <td width="15%" class="text-center">Name</td>
+        <td width="15%" class="text-center">Image</td>
+        <td width="14%" class="text-center">Created</td>
+        <td width="10%" class="text-center">Status</td>
+        <td width="10%" class="text-center">Diff size</td>
+        <td width="10%" class="text-center">Virtual size</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="(key, value) in containerDataList">
+        <td>
+            <button class="btn btn-info btn-block text-center" ng-click="goContainerDetails(value.Id)">
+                {{value.Id | limitTo:12}}
+            </button>
+        </td>
+        <td>
+            <button class="btn btn-info btn-block text-right" ng-click="goContainerDetails(value.Id)">
+                {{value.Name | shorten:true:30}}
+            </button>
+        </td>
+        <td>
+            <button class="btn btn-info btn-block" ng-click="goImageDetails(value.ImageId)">
+                {{value.Image | shorten:true:30}}
+            </button>
+        </td>
+        <td>{{value.Created * 1000 | date:'dd, MMM yyyy HH:mm:ss'}}</td>
+        <td class="text-center">{{value.Status}}</td>
+        <td>{{value.SizeRw | bytes }}</td>
+        <td>{{value.SizeRootFs | bytes }}</td>
+    </tr>
+    </tbody>
+</table>
