--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -12,7 +12,7 @@
 
     </form>
     <div class="table-responsive">
-        <table class="table table-condensed table-bordered">
+        <table class="table table-condensed table-hover table-bordered">
             <tr class="success">
                 <td colspan="8">
                     <div class="input-group col-md-3">
