--- a/app/images/images.html
+++ b/app/images/images.html
@@ -1,7 +1,7 @@
 <div id="main-wrapper" class="col-md-12 pull-right">
     <div id="main">
         <form name="constructionForm" novalidate>
-            <table class="table table-condensed table-bordered">
+            <table class="table table-condensed table-hover table-bordered">
                 <tr class="success">
                     <td colspan="8" align="center">Images on {{$root.hostUrl}}</td>
                 </tr>
