--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 text-center">
+<div class="col-md-12 text-center vcenter">
     Containers on {{$root.hostUrl}}
 </div>
 <table class="table table-condensed table-hover table-bordered">
@@ -12,7 +12,7 @@
                 <div class="col-md-1">
                     <button ng-click='createContainer()' class="btn btn-block btn-success glyphicon glyphicon-plus" title="Create new container"></button>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-10 vcenter" >
                     Containers on {{$root.hostUrl}}
                 </div>
 
