--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>DockerMon</title>
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
+    <link rel='stylesheet' href='assets/css/custom.css'>
 </head>
 <body>
 <div id="header" class="navbar  navbar-fixed-top">
