--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -41,7 +41,7 @@
             <tr ng-repeat="host in hosts | orderBy: '[!status, name]'">
                 <td width="1%" class="text-left">
                     <button ng-disabled="!host.status"
-                            ng-click="checkHost(host)"
+                            ng-click="goHostDetails(host)"
                             ng-class="{'btn btn-success glyphicon glyphicon-signal': host.status, 'btn btn-danger glyphicon glyphicon-flash': !host.status}"
                             title="See host stats">
                     </button>
@@ -71,12 +71,17 @@
                 <td width="7%" class="text-center">{{host.lastConnected | date : shortDate}}</td>
                 <td width="15%" class="text-center">
                     <button ng-class="{'btn btn-success glyphicon glyphicon-log-in': host.selected, 'btn btn-info glyphicon glyphicon-log-in': !host.selected}"
-                            ng-click="checkContainersFor(host)" ng-disabled='!host.status' title="Select host"></button>
+                            ng-click="goContainers(host)" ng-disabled='!host.status' title="Select host"></button>
                     <button ng-class="{'btn btn-warning glyphicon glyphicon-pencil':!host.editHostEnabled, 'btn btn-success glyphicon glyphicon-ok':host.editHostEnabled}"
                             ng-click="saveHost(host)" title="Edit host data"></button>
                     <button class="btn btn-danger glyphicon glyphicon-trash" ng-click="removeHost(host)" title="Delete host from the list"></button>
                 </td>
-                <td width="7%" class="text-center"><span style="font-size:1.5em;" class="glyphicon glyphicon-unchecked" aria-hidden="true"></span></td>
+                <td width="7%" class="text-center">
+                    <span style="font-size:1.5em;"
+                          ng-class="{'glyphicon glyphicon-check':host.defaultConnection, 'glyphicon glyphicon-unchecked':!host.defaultConnection}"
+                          ng-click="setDefaultHost(host)"
+                          aria-hidden="true"></span>
+                </td>
             </tr>
 
         </table>
