--- a/app/containers/containers.html
+++ b/app/containers/containers.html
@@ -1,22 +1,23 @@
 <table class="table table-condensed table-hover table-bordered">
     <thead>
     <tr class="success">
-        <td>
-        </td>
-        <td colspan="7" align="center">
-            <div class="container">
-                <div class="col-md-1">
-                    <button ng-click='refreshContainers()' class="btn btn-block btn-primary glyphicon glyphicon-refresh" title="Refresh list"></button>
-                </div>
-                <div class="col-md-1">
-                    <button ng-click='createContainer()' class="btn btn-block btn-success glyphicon glyphicon-plus" title="Create new container"></button>
-                </div>
-                <div class="col-md-10 vcenter">
-                    Containers on {{$root.hostUrl}}
-                </div>
+        <td colspan="7">
+            <div class="btn-group col-md-4" role="group" aria-label="...">
+                <button type="button" class="btn btn-primary" ng-click='refreshContainers()' title="Refresh list" style="margin-right: 5px"><span
+                        class="glyphicon glyphicon-refresh"></span>Refresh
+                </button>
+                <button type="button" class="btn btn-success" ng-click='createContainer()' title="Create new container" style="margin-right: 5px"><span
+                        class="glyphicon glyphicon-plus"></span>Create
+                </button>
 
             </div>
+            <div class="col-md-6 vcenter">
+                Containers on on {{$root.hostUrl}}
+            </div>
+
         </td>
+
+
     </tr>
     <tr>
         <td width="15%" class="text-center">ID</td>
