Adding browser icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DockerMon</title>
+    <link rel="shortcut icon" href="assets/img/docker_icon.jpg">
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
     <link rel='stylesheet' href='assets/css/custom.css'>
 </head>
