--- a/app/images/images.html
+++ b/app/images/images.html
@@ -1,44 +1,40 @@
-<div id="main-wrapper" class="col-md-12 pull-right">
-    <div id="main">
-        <form name="constructionForm" novalidate>
-            <table class="table table-condensed table-hover table-bordered">
-                <tr class="success">
-                    <td colspan="6">
-                        <div class="col-md-4">
-                            <button type="button" ng-click="refreshImages()" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span>Refresh
-                            </button>
-                            <button type="button" class="btn btn-primary" ng-click="switchShowAllFlag()">
-                                <span ng-class="{'glyphicon glyphicon-unchecked':!showAllImagesFlag, 'glyphicon glyphicon-check':showAllImagesFlag}"></span>All
-                            </button>
-                            <button type="button" class="btn btn-primary" ng-click="switchShowUntaggedFlag()"><span
-                                    ng-class="{'glyphicon glyphicon-unchecked':!showUntaggedImagesFlag, 'glyphicon glyphicon-check':showUntaggedImagesFlag}"></span>Untagged
-                            </button>
-                        </div>
-                        <div class="col-md-6 vcenter">
-                            Images on {{$root.hostUrl}}
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td width="1%" class="text-center">Image ID</td>
-                    <td width="7%" class="all-center">Repository tags</td>
-                    <td width="7%" class="all-center">Size</td>
-                    <td width="15%" class="all-center">VirtualSize</td>
-                    <td width="10%" class="all-center">Created</td>
-                </tr>
-                <tr ng-repeat="image in images">
-                    <td>
-                        <button class="btn btn-info btn-block" ng-click="goImageDetails(image.Id)">
-                            {{image.Id | limitTo:12}}
-                        </button>
-                    </td>
-                    <td><p ng-repeat="tag in image.RepoTags  | orderBy: tag">{{tag}}</p>
-                    </td>
-                    <td>{{image.Size | bytes}}</td>
-                    <td>{{image.VirtualSize| bytes}}</td>
-                    <td>{{image.Created * 1000 | date:'dd-MM-yy HH:mm:ss'}}</td>
-                </tr>
-            </table>
-        </form>
-    </div>
+<div class="col-md-12 pull-right">
+    <table class="table table-condensed table-hover table-bordered">
+        <tr class="success">
+            <td colspan="6">
+                <div class="col-md-4">
+                    <button type="button" ng-click="refreshImages()" class="btn btn-primary"><span class="glyphicon glyphicon-refresh"></span>Refresh
+                    </button>
+                    <button type="button" class="btn btn-primary" ng-click="switchShowAllFlag()">
+                        <span ng-class="{'glyphicon glyphicon-unchecked':!showAllImagesFlag, 'glyphicon glyphicon-check':showAllImagesFlag}"></span>All
+                    </button>
+                    <button type="button" class="btn btn-primary" ng-click="switchShowUntaggedFlag()"><span
+                            ng-class="{'glyphicon glyphicon-unchecked':!showUntaggedImagesFlag, 'glyphicon glyphicon-check':showUntaggedImagesFlag}"></span>Untagged
+                    </button>
+                </div>
+                <div class="col-md-6 vcenter">
+                    <strong>Images on {{$root.hostUrl}}</strong>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td width="7%" class="text-center"><strong>Image ID</strong></td>
+            <td width="20%" class="text-center"><strong>Repository tags</strong></td>
+            <td width="7%" class="text-center"><strong>Size</strong></td>
+            <td width="7%" class="text-center"><strong>Virtual Size</strong></td>
+            <td width="5%" class="text-center"><strong>Created</strong></td>
+        </tr>
+        <tr ng-repeat="image in images | orderBy:RepoTags[0]">
+            <td>
+                <button class="btn btn-info btn-block" ng-click="goImageDetails(image.Id)">
+                    {{image.Id | limitTo:12}}
+                </button>
+            </td>
+            <td><p ng-repeat="tag in image.RepoTags | orderBy: tag">{{tag}}</p>
+            </td>
+            <td>{{image.Size | bytes}}</td>
+            <td>{{image.VirtualSize| bytes}}</td>
+            <td>{{image.Created * 1000 | date:'dd-MM-yy HH:mm:ss'}}</td>
+        </tr>
+    </table>
 </div>
